--- a/app/src/main/res/layout/activity_home_driver.xml
+++ b/app/src/main/res/layout/activity_home_driver.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.theideal.goride.ui.driver.DriverViewModel" />
 
     </data>
 
@@ -22,6 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/available"
+                app:get_driver_status="@{viewModel.setDriverAvailable}"
                 android:layout_gravity="end"
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
         </androidx.appcompat.widget.Toolbar>
