--- a/app/src/main/res/drawable/coming_soon.xml
+++ b/app/src/main/res/drawable/coming_soon.xml
@@ -1,7 +1,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/red" />
+            <solid android:color="@color/dark_sunset_orange" />
             <corners android:radius="4dp" />
             <size android:width="16dp"
                 android:height="8dp" />
@@ -13,7 +13,7 @@
                 <solid android:color="@android:color/transparent" />
                 <stroke
                     android:width="4dp"
-                    android:color="@color/black" />
+                    android:color="@color/dark_ocean_blue" />
             </shape>
         </rotate>
     </item>
