--- a/app/src/main/res/layout/card_home_rider.xml
+++ b/app/src/main/res/layout/card_home_rider.xml
@@ -2,7 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="Card"
             type="com.theideal.goride.model.CardViewData" />
@@ -10,8 +9,6 @@
         <variable
             name="viewModel"
             type="com.theideal.goride.ui.rider.RiderViewModel" />
-
-
     </data>
 
     <androidx.cardview.widget.CardView
@@ -21,44 +18,80 @@
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:clickable="false"
-            android:padding="16dp">
+            android:layout_height="wrap_content">
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:set_image="@{Card}"
-                />
-
-            <TextView
-                android:id="@+id/titleTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:lines="2"
-                android:text="@{Card.title}"
-                android:hint="@string/title"
+                android:orientation="vertical"
                 android:clickable="false"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:padding="16dp">
 
-            <TextView
-                android:id="@+id/subtitleTextView"
-                android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:set_image="@{Card}"
+                    />
+
+                <TextView
+                    android:id="@+id/titleTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lines="2"
+                    android:text="@{Card.title}"
+                    android:hint="@string/title"
+                    android:clickable="false"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/subtitleTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:text="@{Card.subtitle}"
+                    android:hint="@string/subtitle"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="false"
-                android:text="@{Card.subtitle}"
-                android:hint="@string/subtitle"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="16sp" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true">
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/ic_serrated_edge" />
 
-        </LinearLayout>
-
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/coming_soon"
+                    android:text="@string/coming_soon"
+                    app:text_visibility="@{Card}"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"/>
+            </RelativeLayout>
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </layout>
