--- a/app/src/main/res/layout/fragment_serivces_driver.xml
+++ b/app/src/main/res/layout/fragment_serivces_driver.xml
@@ -19,17 +19,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.driver.services.ServicesDriverFragment">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/driver_services_in_fragment_services"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:list_data="@{viewModel.servicesDriver}"
-            tools:listitem="@layout/card_home_rider" />
+            app:cardUseCompatPadding="true"
+            app:cardBackgroundColor="@color/ocean_blue"
+            app:layout_constraintTop_toTopOf="parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/driver_services_in_fragment_services"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:list_data="@{viewModel.servicesDriver}"
+                    tools:listitem="@layout/card_home_rider" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
