--- a/app/src/main/res/layout/fragment_profile_driver.xml
+++ b/app/src/main/res/layout/fragment_profile_driver.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:binding="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.theideal.goride.ui.driver.profile.ProfileDriverViewModel" />
 
     </data>
 
@@ -24,6 +28,12 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                <include
+                    layout="@layout/card_user_info2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    binding:viewModel="@{viewModel}"
+                    />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
